--- a/apps.html
+++ b/apps.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">👾 v1.3 just dropped! 20 NEW Games, Bug Fixes, NEW features, and more! 😀 <i>[v1.3]</i></p>
+        <p class="updatetext">🏫 LAST DAY OF SCHOOL UPDATE IS HERE! 6 NEW Games, and more! SEE YOU IN SEPTEMBER! 😁 <i>[v1.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
