--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,27 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">👾 v1.3 just dropped! 20 NEW Games, Bug Fixes, NEW features, and more! 😀 <i>[v1.3]</i></p>
+        <p class="updatetext">🏫 LAST DAY OF SCHOOL UPDATE IS HERE! 6 NEW Games, and more! SEE YOU IN SEPTEMBER! 😁 <i>[v1.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v1.3 - <span style="color: yellow">6/12/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v1.4 - <span style="color: yellow">6/13/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>R.I.P Floopy Web</li>
+            <li>Updated News</li>
+            <li>Added game Dead Zed 2</li>
+            <li>Added game Roblox Color Run</li>
+            <li>Added game Roblox Bladeball</li>
+            <li>Added game Roblox Obby</li>
+            <li>Added game Roblox Rob The Bank Obby</li>
+            <li>Added game 60 Second Burger Run</li>
+            <li>Added unblocked website CoolMathGames</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v1.3 - <span style="color: yellow">6/12/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Fixed multiple "No results." bug</li>
             <li>Added drag featue to Floopy Phone</li>
