--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">👾 v1.3 just dropped! 20 NEW Games, Bug Fixes, NEW features, and more! 😀 <i>[v1.3]</i></p>
+        <p class="updatetext">🏫 LAST DAY OF SCHOOL UPDATE IS HERE! 6 NEW Games, and more! SEE YOU IN SEPTEMBER! 😁 <i>[v1.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
@@ -123,7 +123,7 @@
     <h2 class="rainbow-text">Unblocked News</h2>
 
     <center>
-        <p style="font-size: larger; font-weight: bold;" class="substitute"><span style="color: yellow;">6/2/2024</span> News | Floopy Phone feature just dropped! Now not only can you play games in class, you can use a phone too! Floopy Network is also now a week old!</p>
+        <p style="font-size: larger; font-weight: bold;" class="substitute"><span style="color: yellow;">6/13/2024</span> News | Sad News! Shark Networks is down! I cannot say what happend to Shark Networks because Fredrick (the owner of Shark Networks) wants me to keep the details classified.</p>
     </center>
 
     <h2 class="rainbow-text">What is coming next on Floopy Network?</h2>
