--- a/unblockedwebsites.html
+++ b/unblockedwebsites.html
@@ -9,11 +9,18 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">👾 v1.3 just dropped! 20 NEW Games, Bug Fixes, NEW features, and more! 😀 <i>[v1.3]</i></p>
+        <p class="updatetext">🏫 LAST DAY OF SCHOOL UPDATE IS HERE! 6 NEW Games, and more! SEE YOU IN SEPTEMBER! 😁 <i>[v1.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to Unblocked Websites.</p>
+
+    <div class="gamediv">
+        <a href="https://coolmathgames.com/">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/R.aaee779248d47f221465e4ccbdb1b11e?rik=y5RKF%2buzgW0Lrw&pid=ImgRaw&r=0&adlt=strict" alt="Unblocked" width="150" height="150"></button>
+            <p class="gameundertext">CoolMathGames</p>
+        </a>
+    </div>
 
     <div class="gamediv">
         <a href="https://sites.google.com/view/tripplethepotatoes/home?authuser=0">
