--- a/floopyphone/phone.html
+++ b/floopyphone/phone.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Android Oreo Simulator</title>
 </head>
 <body>
     <iframe src="https://scratch.mit.edu/projects/121652582/embed" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"></iframe>
