--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 Page Not Found</title>
+    <title>404</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,7 +20,8 @@
     </style>
 </head>
 <body>
-    <h1>404 Page Not Found</h1>
+    <h1>404 </h1>
+    <h1>Page Not Found</h1>
     <p>The page you are looking for could not be found.</p>
 </body>
 </html>
