--- a/apps.html
+++ b/apps.html
@@ -12,6 +12,9 @@
         <p class="updatetext">🏫 LAST DAY OF SCHOOL UPDATE IS HERE! 6 NEW Games, and more! SEE YOU IN SEPTEMBER! 😁 <i>[v1.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
+    <center>
+        <button class="panicbutton" onclick="window.location.href='https://www.google.com'">PANIC BUTTON</button>
+    </center>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to the apps section.</p>
 
@@ -118,7 +121,7 @@
         <a onclick="injectHome()"><button class="homebtn"><img src="img/home.png" alt="Home"></button></a>
         <a onclick="injectGames()"><button class="gamebtn"><img src="img/game.png" alt="Games"></button></a>
         <a onclick="injectApps()"><button class="appsbtn"><img src="img/apps.png" alt="Apps"></button></a>
-        <a onclick="injectFloopyweb()"><button class="floopywebbtn"><img src="img/floopyweb.png" alt="Floopy Web"></button></a>
+        <a onclick="injectfloopyweb()"><button class="floopywebbtn"><img src="img/floopyweb.png" alt="floopy Web"></button></a>
         <button class="morebtn"><img src="img/more.png" alt="More"></button>
     </div>
 
