--- a/changelog.html
+++ b/changelog.html
@@ -14,7 +14,19 @@
     </div>
 
     <div>
-        <h1>release v1.4 - <span style="color: yellow">6/13/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v1.5 - <span style="color: yellow">...</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Floopy Web is back!</li>
+            <li>Added "Launch in New Window" button</li>
+            <li>Added the "Panic Button", makes school life easy!</li>
+            <li>Added notifications</li>
+            <li>Added the Unblocked Website Symbaloo</li>
+            <li>Added "+" and "-" buttons to games for game frame adjusting</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v1.4 - <span style="color: yellow">6/13/2024</span> - <span style="color: lime">OUTDATED</span></h1>
         <ul>
             <li>R.I.P Floopy Web</li>
             <li>Updated News</li>
