--- a/tv.html
+++ b/tv.html
@@ -10,6 +10,9 @@
         <p class="updatetext">🏫 LAST DAY OF SCHOOL UPDATE IS HERE! 6 NEW Games, and more! SEE YOU IN SEPTEMBER! 😁 <i>[v1.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
+    <center>
+        <button class="panicbutton" onclick="window.location.href='https://www.google.com'">PANIC BUTTON</button>
+    </center>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to the TV section.</p>
     <h2 class="rainbow-text">TV Apps</h2>
