--- a/unblockedwebsites.html
+++ b/unblockedwebsites.html
@@ -12,8 +12,18 @@
         <p class="updatetext">🏫 LAST DAY OF SCHOOL UPDATE IS HERE! 6 NEW Games, and more! SEE YOU IN SEPTEMBER! 😁 <i>[v1.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
+    <center>
+        <button class="panicbutton" onclick="window.location.href='https://www.google.com'">PANIC BUTTON</button>
+    </center>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to Unblocked Websites.</p>
+
+    <div class="gamediv">
+        <a href="https://www.symbaloo.com/">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.A8kh7GRWWkXH7Q2FW6iubQHaHa?rs=1&pid=ImgDetMain" alt="Unblocked" width="150" height="150"></button>
+            <p class="gameundertext">Symbaloo</p>
+        </a>
+    </div>
 
     <div class="gamediv">
         <a href="https://coolmathgames.com/">
