--- a/changelog.html
+++ b/changelog.html
@@ -12,6 +12,10 @@
         <p class="updatetext">🏫 LAST DAY OF SCHOOL UPDATE IS HERE! 6 NEW Games, and more! SEE YOU IN SEPTEMBER! 😁 <i>[v1.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
+    
+    <center>
+        <button class="panicbutton" onclick="window.location.href='https://www.google.com'">PANIC BUTTON</button>
+    </center>
 
     <div>
         <h1>release v1.5 - <span style="color: yellow">...</span> - <span style="color: lime">LATEST</span></h1>
@@ -22,6 +26,7 @@
             <li>Added notifications</li>
             <li>Added the Unblocked Website Symbaloo</li>
             <li>Added "+" and "-" buttons to games for game frame adjusting</li>
+            <li>Added "The Floopy Times" (Floopy News basically)</li>
         </ul>
     </div>
 
