--- a/changelog.html
+++ b/changelog.html
@@ -27,11 +27,12 @@
             <li>Added the Unblocked Website Symbaloo</li>
             <li>Added "+" and "-" buttons to games for game frame adjusting</li>
             <li>Added "The Floopy Times" (Floopy News basically)</li>
+            <li>Added side games</li>
         </ul>
     </div>
 
     <div>
-        <h1>release v1.4 - <span style="color: yellow">6/13/2024</span> - <span style="color: lime">OUTDATED</span></h1>
+        <h1>release v1.4 - <span style="color: yellow">6/13/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>R.I.P Floopy Web</li>
             <li>Updated News</li>
