--- a/changelog.html
+++ b/changelog.html
@@ -28,6 +28,7 @@
             <li>Added "+" and "-" buttons to games for game frame adjusting</li>
             <li>Added "The Floopy Times" (Floopy News basically)</li>
             <li>Added side games</li>
+            <li>Fixed the common div style because of preformance issues</li>
         </ul>
     </div>
 
