--- a/settings.html
+++ b/settings.html
@@ -3,30 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
-    <style>
-        body {
-            background-color: #f1f1f1;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-
-        h1 {
-            color: #333;
-            font-size: 36px;
-            margin-top: 150px;
-        }
-
-        p {
-            color: #666;
-            font-size: 18px;
-            margin-top: 20px;
-        }
-    </style>
+    <script src="js/menunav.js"></script>
+    <script src="js/settings.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Coming Soon</h1>
-    <p>Settings is coming later, stay tuned.</p>
+    <div class="updatebar">
+        <p class="updatetext">🏫 LAST DAY OF SCHOOL UPDATE IS HERE! 6 NEW Games, and more! SEE YOU IN SEPTEMBER! 😁 <i>[v1.4]</i></p>
+        <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
+    </div>
+    <center>
+        <button class="panicbutton" onclick="window.location.href='https://www.google.com'">PANIC BUTTON</button>
+    </center>
+    <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
+    <p class="undertop">Welcome to the settings page.</p>
+
+    <div class="settingsdiv">
+        <h1>Theme</h1>
+        <div>
+            <select onchange="handleBackgroundChange(this)" id="backgroundSelector">
+                <option value="option1">Dark (Default Theme)</option>
+                <option value="option2">Light (Burns your eyes)</option>
+                <option value="option3">Dark Modern</option>
+                <option value="option4">Light Modern</option>
+                <option value="option5">Pitch Black</option>
+            </select>
+        </div>
+
+        <div>
+            <p style="display: inline-block; font-size: 20px;">Retro Mode <b style="color: deepskyblue;">(BETA)</b></p>
+            <label class="switch">
+                <input type="checkbox" id="toggleSwitch">
+                <span class="slider"></span>
+            </label>
+        </div>
+    </div>
 
     <div class="menu">
         <p class="menu-label">Floopy Menu</p>
