--- a/changelog.html
+++ b/changelog.html
@@ -29,6 +29,7 @@
             <li>Added "The Floopy Times" (Floopy News basically)</li>
             <li>Added side games</li>
             <li>Fixed the common div style because of preformance issues</li>
+            <li>Added Github Button</li>
         </ul>
     </div>
 
