--- a/games.html
+++ b/games.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" type="text/css" href="/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/menunav.js"></script>
-    <link rel="icon" href="img/fakechromeicon.jpg">
     <script src="js/gameLoader.js"></script>
     <script src="js/notifications.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -74,6 +73,16 @@
             <!-- PLACEHOLDER DIV PLEASE IGNORE!!! -->
         </a>
     </div>
+
+    <div class="gamediv" onclick="addGame();">
+        <a>
+            <button class="choicegamebtn"><img src="img/add.png" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="color: lime;">Add Game</p>
+        </a>
+    </div>
+
+
+
 
     <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
         <a>
