--- a/settings.html
+++ b/settings.html
@@ -40,6 +40,29 @@
         </div>
     </div>
 
+    <div class="settingsdiv">
+        <h1>Tab Cloaker</h1>
+        <div>
+            <input type="text" id="webpageTitle" class="webpageinput" placeholder="Enter Webpage Title">
+            <button onclick="setTitle();" class="titlebutton">Set</button>
+        </div>
+
+        <div>
+            <!-- Webpage Image -->
+
+            <select id="imageSelector" style="border-image-source: linear-gradient(45deg, lightblue, darkblue, lightblue, darkblue, lightblue, darkblue);">
+                <option value="option6">New Tab Logo</option>
+                <option value="option7">Floopy Logo</option>
+                <option value="option8">Google Logo</option>
+                <option value="option9">Classroom Logo</option>
+                <option value="option10">Membean Logo</option>
+                <option value="option11">Docs Logo</option>
+                <option value="option12">Sheets Logo</option>
+                <option value="option13">Slides Logo</option>
+            </select>
+        </div>
+    </div>
+
     <div class="menu">
         <p class="menu-label">Floopy Menu</p>
         <a onclick="injectHome()"><button class="homebtn"><img src="img/home.png" alt="Home"></button></a>
