--- a/home.html
+++ b/home.html
@@ -86,6 +86,13 @@
     </script>
 
     <h2 style="color: deepskyblue; text-align: center;">We are now partnered with Shark Networks!</h2>
+
+    <center>
+        <button class="githubbutton" style="background-color: white;" onclick="window.location.href = 'https://github.com/floopynetwork/floopynetwork.github.io';">
+            <p style="display: inline-block; color: black;">View The Github Repository</p>
+        </button>
+    </center>
+
     <h2 class="rainbow-text">Top 5 Games</h2>
     <center>
         <div class="gamediv" onclick="loadGameByDiv(event)">
