--- a/games.html
+++ b/games.html
@@ -66,6 +66,10 @@
         <button class="randombtn" onclick="randomGame()">RANDOM GAME</button>
     </div>
 
+    <div style="text-align: center;">
+        <button class="randombtn">FAVORITE GAMES</button>
+    </div>
+
     <div class="gamediv" onclick="loadGameByDiv(event)" style="display: none;">
         <a>
             <button class="choicegamebtn"><img src="" alt="Game" width="150" height="150"></button>
