--- a/games.html
+++ b/games.html
@@ -67,7 +67,7 @@
     </div>
 
     <div style="text-align: center;">
-        <button class="randombtn">FAVORITE GAMES</button>
+        <button class="favoritebtn">FAVORITE GAMES</button>
     </div>
 
     <div class="gamediv" onclick="loadGameByDiv(event)" style="display: none;">
