--- a/settings.html
+++ b/settings.html
@@ -19,6 +19,8 @@
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to the settings page.</p>
 
+    <h1 style="text-align: center; color: yellow;">WARNING: <span style="color: rgb(255, 145, 0);">Settings is in a beta phase, so expect bugs.</span></h1>
+
     <div class="settingsdiv">
         <h1>Theme</h1>
         <div>
@@ -28,6 +30,7 @@
                 <option value="option3">Dark Modern</option>
                 <option value="option4">Light Modern</option>
                 <option value="option5">Pitch Black</option>
+                <option value="option6">Strawberry</option>
             </select>
         </div>
 
@@ -37,6 +40,7 @@
                 <input type="checkbox" id="toggleSwitch">
                 <span class="slider"></span>
             </label>
+            <i style="display: block;">If Retro Mode dosen't work, try reopening settings.</i>
         </div>
     </div>
 
