--- a/changelog.html
+++ b/changelog.html
@@ -30,6 +30,13 @@
             <li>Added side games</li>
             <li>Fixed the common div style because of preformance issues</li>
             <li>Added Github Button</li>
+            <li>Added Settings page</li>
+            <li>Fixed iframe keyboard sensing issues</li>
+            <li>Added game Archimedes Client (Eaglercraft)</li>
+            <li>Added game Ayuncraft Client (Eaglercraft)</li>
+            <li>Added game DragonX Client V2 (Eaglercraft)</li>
+            <li>Added game DragonX Client V3 (Eaglercraft)</li>
+            <li>Added game Resent Client 3.6 (Eaglercraft)</li>
         </ul>
     </div>
 
