--- a/settings.html
+++ b/settings.html
@@ -51,9 +51,7 @@
             <button onclick="setTitle();" class="titlebutton">Set</button>
         </div>
 
-        <div>
-            <!-- Webpage Image -->
-
+        <!-- <div>
             <select id="imageSelector" style="border-image-source: linear-gradient(45deg, lightblue, darkblue, lightblue, darkblue, lightblue, darkblue);">
                 <option value="option6">New Tab Logo</option>
                 <option value="option7">Floopy Logo</option>
@@ -64,7 +62,7 @@
                 <option value="option12">Sheets Logo</option>
                 <option value="option13">Slides Logo</option>
             </select>
-        </div>
+        </div> -->
     </div>
 
     <div class="menu">
