--- a/games.html
+++ b/games.html
@@ -34,7 +34,7 @@
 
     <h2 style="text-align: center;">
         <span class="game-count-1">PLAY</span> 
-        <span class="game-count-2" id="game-count">146</span> 
+        <span class="game-count-2" id="game-count">151</span> 
         <span class="game-count-1">GAMES</span>
     </h2>
 
@@ -79,14 +79,47 @@
     </div>
 
     <div class="gamediv" onclick="addGame();">
+        <!-- ADD GAME DIV -->
         <a>
             <button class="choicegamebtn"><img src="img/add.png" alt="Game" width="150" height="150"></button>
             <p class="gameundertext" style="color: lime;">Add Game</p>
         </a>
     </div>
 
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://raw.githubusercontent.com/floopynetworkgamingservice/IMG/6aa3848873c6d41296c0ae50e7f360848334ffe6/resent.PNG" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Resent Client 3.6 <br>(Eaglercraft)</br></p>
+        </a>
+    </div>
+    
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://raw.githubusercontent.com/floopynetworkgamingservice/IMG/2107594406ed1d3d781ed69cf10bce6b1a2bccff/dragonv3.PNG" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">DragonX Client V3 <br>(Eaglercraft)</br></p>
+        </a>
+    </div>
 
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://raw.githubusercontent.com/floopynetworkgamingservice/IMG/master/dragonv2.PNG" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">DragonX Client V2 <br>(Eaglercraft)</br></p>
+        </a>
+    </div>
 
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://raw.githubusercontent.com/floopynetworkgamingservice/IMG/master/ayuncraft.PNG" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Ayuncraft Client <br>(Eaglercraft)</br></p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/R.0b634bdeeb54e88797facbf11a786bf4?rik=V2ji8rYyeYqaXQ&pid=ImgRaw&r=0&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Archimedes Client <br>(Eaglercraft)</br></p>
+        </a>
+    </div>
 
     <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
         <a>
