--- a/changelog.html
+++ b/changelog.html
@@ -37,6 +37,11 @@
             <li>Added game DragonX Client V2 (Eaglercraft)</li>
             <li>Added game DragonX Client V3 (Eaglercraft)</li>
             <li>Added game Resent Client 3.6 (Eaglercraft)</li>
+            <li>Added game Resent Client 4.0 (Eaglercraft)</li>
+            <li>Added game Mega Client (Eaglercraft)</li>
+            <li>Added game Pi Client 1.0 (Eaglercraft)</li>
+            <li>Added game Precision Client (Eaglercraft)</li>
+            <li>Search bar got stronger, can now find games by description.</li>
         </ul>
     </div>
 
@@ -48,8 +53,7 @@
             <li>Added game Dead Zed 2</li>
             <li>Added game Roblox Color Run</li>
             <li>Added game Roblox Bladeball</li>
-            <li>Added game Roblox Obby</li>
-            <li>Added game Roblox Rob The Bank Obby</li>
+            <li>Added game Roblox Obby</li>            <li>Added game Roblox Rob The Bank Obby</li>
             <li>Added game 60 Second Burger Run</li>
             <li>Added unblocked website CoolMathGames</li>
         </ul>
