--- a/games.html
+++ b/games.html
@@ -34,7 +34,7 @@
 
     <h2 style="text-align: center;">
         <span class="game-count-1">PLAY</span> 
-        <span class="game-count-2" id="game-count">151</span> 
+        <span class="game-count-2" id="game-count">155</span> 
         <span class="game-count-1">GAMES</span>
     </h2>
 
@@ -83,6 +83,34 @@
         <a>
             <button class="choicegamebtn"><img src="img/add.png" alt="Game" width="150" height="150"></button>
             <p class="gameundertext" style="color: lime;">Add Game</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.mpCGqV_6b6yyiPVESNJTNgAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Precision Client <br>(Eaglercraft)</br></p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.neYI4v4ql-2PpGdWlP-sJgAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Pi Client 1.0 <br>(Eaglercraft)</br></p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.dLkYwFE6vGwSxB-c_v0yfwAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Mega Client <br>(Eaglercraft)</br></p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://raw.githubusercontent.com/floopynetworkgamingservice/IMG/6aa3848873c6d41296c0ae50e7f360848334ffe6/resent.PNG" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Resent Client 4.0 <br>(Eaglercraft)</br></p>
         </a>
     </div>
 
