--- a/settings.html
+++ b/settings.html
@@ -35,7 +35,7 @@
         </div>
 
         <div>
-            <p style="display: inline-block; font-size: 20px;">Retro Mode <b style="color: deepskyblue;">(BETA)</b></p>
+            <p style="display: inline-block; font-size: 20px;">Retro Mode <b style="color: red;">(BROKEN)</b></p>
             <label class="switch">
                 <input type="checkbox" id="toggleSwitch">
                 <span class="slider"></span>
