--- a/apps.html
+++ b/apps.html
@@ -18,6 +18,27 @@
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to the apps section.</p>
 
+    <div class="gamediv" style="position: relative; top: 15px;">
+        <a href="https://www.calculatorsoup.com/calculators/statistics/mean-median-mode.php">
+            <button class="choicegamebtn"><img src="https://cdn.calculatorsoup.com/images/icons/calculator_soup_96x96.png" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Mean, Median, Mode <br>Calculator</br></p>
+        </a>
+    </div>
+
+    <div class="gamediv">
+        <a href="https://www.drive.google.com">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.uXNTvRBxm6Btas-UE4tX7AHaGa?rs=1&pid=ImgDetMain&adlt=strict" alt="App" width="150" height="150"></button>
+            <p class="gameundertext">Google Drive</p>
+        </a>
+    </div>
+
+    <div class="gamediv">
+        <a href="https://www.sites.google.com">
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.dx0QOHOWUHJEqUVCn9OcTAHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="App" width="150" height="150"></button>
+            <p class="gameundertext">Google Sites</p>
+        </a>
+    </div>
+
     <div class="gamediv">
         <a href="https://yeahmovies.tv/cmovies">
             <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.HMhilueBCuTRyA5X3AkFagAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="App" width="150" height="150"></button>
