--- a/changelog.html
+++ b/changelog.html
@@ -41,7 +41,24 @@
             <li>Added game Mega Client (Eaglercraft)</li>
             <li>Added game Pi Client 1.0 (Eaglercraft)</li>
             <li>Added game Precision Client (Eaglercraft)</li>
+            <li>Added game Kone Client (Eaglercraft)</li>
+            <li>Added game Shell Shockers</li>
+            <li>Added game Smash Karts</li>
+            <li>Added game Crystal Seeker</li>
+            <li>Added game Roblox 3D Online</li>
+            <li>Added game Happy Wheels</li>
+            <li>Added game Snow Rider 3D</li>
+            <li>Added game Pako Highway</li>
+            <li>Added game Bally</li>
+            <li>Added game Block World</li>
+            <li>Added "Add Game" button</li>
             <li>Search bar got stronger, can now find games by description.</li>
+            <li>Added game recommendations</li>
+            <li>Search bar no longer has a hover animation</li>
+            <li>Addd app Google Sites</li>
+            <li>Added app Google Drive</li>
+            <li>Added app Mean, Median, Mode Calculator</li>
+            <li>Added a shutdown page in case of an emergency</li>
         </ul>
     </div>
 
