--- a/games.html
+++ b/games.html
@@ -34,7 +34,7 @@
 
     <h2 style="text-align: center;">
         <span class="game-count-1">PLAY</span> 
-        <span class="game-count-2" id="game-count">155</span> 
+        <span class="game-count-2" id="game-count">165</span> 
         <span class="game-count-1">GAMES</span>
     </h2>
 
@@ -66,10 +66,6 @@
         <button class="randombtn" onclick="randomGame()">RANDOM GAME</button>
     </div>
 
-    <div style="text-align: center;">
-        <button class="favoritebtn">FAVORITE GAMES</button>
-    </div>
-
     <div class="gamediv" onclick="loadGameByDiv(event)" style="display: none;">
         <a>
             <button class="choicegamebtn"><img src="" alt="Game" width="150" height="150"></button>
@@ -83,6 +79,76 @@
         <a>
             <button class="choicegamebtn"><img src="img/add.png" alt="Game" width="150" height="150"></button>
             <p class="gameundertext" style="color: lime;">Add Game</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP._M3rhtjc6oKv940NE1vy5gHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Block World</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.GRjT4tGxjXZYX9d8oUW24wAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Bally</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.JLjmVVLNw4mjenPRSLc9iwHaF4?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Pako <br>Highway</br></p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.8THDkuASawqsvl6HxkzuCgAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Snow Rider <br>3D</br></p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/R.5ea8a4bda55fe38a7f61fd9044d663f7?rik=Xc9rwtd7IRqrMA&pid=ImgRaw&r=0&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Happy Wheels</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.fBr0m3zkarXw2OLVQfp47QAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Roblox 3D <br>Online</br></p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/R.6e0aa65b316414ae307aca8f3fdc4a34?rik=4MIuI1CQTAMHzw&pid=ImgRaw&r=0&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Crystal Seeker</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.n67hyyl-nwXaT43DlP0CGwAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Smash Karts</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/R.d1956a567c90e29f05cd51aaa45327de?rik=I2g%2fvcjd6%2fIr1g&pid=ImgRaw&r=0&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Shell Shockers</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="loadGameByDiv(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://raw.githubusercontent.com/floopynetworkgamingservice/IMG/8d89e5f612122aae1441889feebc293128a6d5cc/koneClientHd.png" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Kone Client <br>(Eaglercraft)</br></p>
         </a>
     </div>
 
